--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "body-parser": "^1.20.2",
     "ejs": "^3.1.9",
-    "express": "^4.18.3",
+    "express": "^4.18.3"
+  },
+  "devDependencies": {
     "nodemon": "^3.1.0"
   }
 }
